...
                Locale("pt", "BR")
            ).format(mov.dthrMovEquipVisitTerc)
            val tipoMov = if (mov.tipoMovEquipVisitTerc!!.ordinal == 0) "ENTRADA" else "SAÍDA"
            val veiculo = "${mov.veiculoMovEquipVisitTerc}"
            val placa = "${mov.placaMovEquipVisitTerc}"
            val tipoVisitTerc = when (mov.tipoVisitTercMovEquipVisitTerc!!) {
                TypeVisitTerc.VISITANTE -> "VISITANTE"
                TypeVisitTerc.TERCEIRO -> "TERCEIRO"
            }
            val resultGetMotorista = getMotoristaVisitTerc(
                mov.tipoVisitTercMovEquipVisitTerc!!,
                mov.idVisitTercMovEquipVisitTerc!!
            )
...
