...
import br.com.usinasantafe.pcpcomp.ui.theme.AlertDialogSimpleDesign
import br.com.usinasantafe.pcpcomp.ui.theme.PCPCompTheme
import br.com.usinasantafe.pcpcomp.ui.theme.TextButtonDesign
import br.com.usinasantafe.pcpcomp.ui.theme.TitleDesign
import br.com.usinasantafe.pcpcomp.utils.FlowApp

const val TAG_DESTINO_TEXT_FIELD_VISIT_TERC = "tag_destino_text_field_visit_terc"

@Composable
fun DestinoVisitTercScreen(
    viewModel: DestinoVisitTercViewModel,
    onNavPassagList: () -> Unit,
    onNavDetalhe: () -> Unit,
...
